# YCSB-C

./: .gitignore  .gitmodules  CMakeLists.txt  ycsbc.cc  ycsbc.h  ycsbc_test.cc
core/: CMakeLists.txt  client.h  core_workload.cc  core_workload.h  db.h  uniform_generator.h  utils.h
db/: CMakeLists.txt  basic_db.h  db_factory.cc  hashtable_db.cc  hashtable_db.h  mega_db.h
workloads/: workloadb.spec  workloadd.spec  workloadf.spec  workloadg.spec
